few changes before implementing lying